kustomize/clusters/vader/user-apps/mealie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie-deployment

spec:
  selector:
    matchLabels:
      app: mealie
  replicas: 1
  template:
    metadata:
      labels: 
        app: mealie
    spec:
      containers:
        - name: mealie
          image: hkotel/mealie:latest
          volumeMounts:
            - name: data
              mountPath: /app/data
          ports:
            - containerPort: 80
              name: http
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mealie-data-pvc
