kustomize/clusters/vader/user-apps/mealie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod-cluster-issuer

spec:
  rules:
    - host: mealie.feldman.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie-service
                port:
                  number: 80

  tls:
    - hosts:
      - mealie.feldman.in
      secretName: mealie-feldman-in-tls
